--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel = "stylesheet" href="sample.css">
+    <link rel = "stylesheet" href="./src/styles/style.css">
     <title>React Tutorial</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
   </head>
   <body>
     <div id="content"></div>
